--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
     %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{
     site.data.ui-text[site.locale].feed_label | default: "Feed"
         }}</a></li>
-    <li><img src="{{ site.url }}/assets/logo_anr.png" alt="brand"></li>
+    <li><img src="{{ site.url }}/assets/logo_anr.png" width="25%" alt="brand"></li>
   </ul>
 </div>
 
